2011-11-29  Sergio Martin <sergio.martin@artica.es>

	* include/functions_db.php: Fixed search on the function
	that provides the visible users and clean code

2011-11-29  Sergio Martin <sergio.martin@artica.es>

	* include/functions_db.php: Extend get user visible users 
	function to provide the users of the same project of a project
	manager too

2011-11-28  Sergio Martin <sergio.martin@artica.es>

	* include/functions_api.php: Fixed api function of
	that provides the incidents

	* include/config_process.php: Updated build

2011-11-25  Sancho Lerena <slerena@artica.es>

	* operation/download/browse.php: Fixed damm problem with some downloads
	was due blank spaces. After applying safe_output to data it's fixed!

	Some changes in order to use Integria as CRM :-). Need some work
	but it's functional.

	* include/api.php, 
	include/functions_api.php: New api call for external auth/validation on
	user/pass.

	* operation/side_menu.php: New organization, some things are now in 
	"customers" block, added new quick links to create items.

	* operation/contracts/contract_detail.php: Removed bad call to unused js

	* operation/companies/company_detail.php: Implemented here the main CRM 
	view to search from companies: contracts, contacts and the NEW activities.
	All depends on companies now. Added group to company. Need to reevaluate
	the group thing inside the contract and the relationship with the inventory
	and the ACL. This is the first version, a lot work needed here.
 
	* integria_db.sql,
	upgrade_to_3.0.sql: Added group to tcompany, and created tcompany_activity

2011-11-24  Sancho Lerena <slerena@artica.es>

	* operation/tool_menu.php, 
	general/home.php: Minimal cosmetic changes.

	* include/styles/integria.css: Some changes in styles.

	* include/functions_calendar.php: Smaller calendar.

	* include/languages/es.mo: Updated compiled strings, need to update
	from Launchad the .po file

	* images/arrow.gif: New image for bullet icon.

	* general/footer.php,