@@ -27,8 +27,11 @@ if ((give_acl($id_user, $id_grupo, "PR") != 1) AND (give_acl($id_user, $id_grupo
 	exit;
 }
 
-$id = get_parameter ("id","");
-if (($id != "") && ($id != $id_user)){
+$id = get_parameter ("id", $config["id_user"]);
+
+$users = get_user_visible_users();
+
+if (($id != "") && ($id != $id_user) && in_array($id, array_keys($users))){
 	if (give_acl($id_user, 0, "PW"))
 		$id_user = $id;
 	else {
